Fixed mobile layout issue with Campaign logos not fitting on one line

--- a/src/style/MyPage.less
+++ b/src/style/MyPage.less
@@ -493,6 +493,7 @@ a.btn.btn-lg.btn-default.btn-gl.discrete-login {
 		flex-direction: row;
 		width: 100%;
 		text-align: center;
+		flex-wrap: wrap;
 }
 
 // TODO: replace img with code , so we don't need this anymore
